[package]
name = "blacklistd"
version = "0.1.1"
authors = ["Marc Mettke <marc@itmettke.de>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = "2.33"
clokwerk = "0.2"
diesel = { version = "1.4", features = ["postgres", "mysql", "sqlite", "r2d2", "chrono"] }
iron = "0.6"
log = "0.4"
r2d2 = "0.8"
reqwest = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple_logger = "1.3"
time = "0.1"
