[package]
name = "blacklistd"
version = "0.2.0"
authors = ["Marc Mettke <marc@itmettke.de>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = "2.33"
clokwerk = "0.3"
diesel = { version = "1.4", features = ["postgres", "mysql", "sqlite", "r2d2", "chrono"] }
iron = "0.6"
log = "0.4"
r2d2 = "0.8"
reqwest = { version = "0.10", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple_logger = "1.3"
time = "0.2"
